[package]
edition = "2021"
name = "datafusion-objectstore-gcs"
description = "GCS as an ObjectStore for Datafusion"
version = "0.1.0"
homepage = "https://github.com/ajroetker/datafusion-objectstore-gcs"
repository = "https://github.com/ajroetker/datafusion-objectstore-gcs"
readme = "README.md"
authors = ["AJ Roetker <ajroetker@gmail.com>"]
license = "Apache-2.0"
keywords = [ "arrow", "query", "sql", "datafusion" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "datafusion_objectstore_gcs"
path = "src/lib.rs"

[dependencies]
# cloud-storage = "0.11"
cloud-storage = { path = "../cloud-storage-rs" }
async-trait = "0.1.52"
bytes = "1.1.0"
# datafusion-data-access = { version = "10.0.0" }
datafusion = { version = "8.0.0" }
futures = "0.3.24"
http = "0.2.6"
num_cpus = "1.13.1"
tokio = { version = "1.0", features = ["macros", "rt", "rt-multi-thread", "sync", "fs"] }
